# Paint

./: CMakeLists.txt  ColorChooser.qml  ColorChooserModel.cpp  ColorChooserModel.hpp  PaintModel.cpp  PaintModel.hpp  Paint_ru_RU.ts  Viewport.qml  main.cpp  main.qml  qml.qrc
